--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8">
@@ -10,3 +10,4 @@
     <p>Redirection vers <a href="html/login.html">l'application</a>.</p>
   </body>
   </html>
+
